# VU-lab

./: .copier-answers.yml  .env.linux.simulated  .env.windows  .env.windows.example  .env.windows.simulated  .gitignore  .pre-commit-config.yaml  .pyirc  404.html  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  create_certificates.sh  docker-compose.yml  error.txt  index.html  log.txt  mkdocs.yml  objects.inv  platform_config.yaml  project_setup.md  pyproject.toml  settings.py  sonar-project.properties
.github/workflows/: build.yml  next_steps.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  publish-docs.yml  test-compose.yml
about/: index.html
components/: index.html
components/robot_arm/: index.html
components/teleshake/: index.html
docs/: about.md  components.md  index.md  lab-configuration.md  orchestrator.md
docs/components/: platereader.md  robot_arm.md  teleshake.md
docs/overrides/: home.html
docs/overview/: inventory.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-06-24-documentation-pages.md
docs/superpowers/specs/: 2026-06-24-documentation-design.md
gen5/: Dockerfile  README.md
gen5/gen5/: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  gen5_service.bat  pyproject.toml  register_login_item.bat
gen5/gen5/src/connector/: __init__.py  __main__.py  door_controller.py  gen5_service.py  protocol_controller.py  shake_controller.py  simulation_controller.py  temperature_controller.py
gen5/gen5/src/connector/features/: empty.prt  empty.xml  read_in_progress_error.py
gen5/gen5/src/connector/features/door_controller/: __init__.py  door_controller_base.py
gen5/gen5/src/connector/features/gen5_service/: __init__.py  gen5_service_base.py
gen5/gen5/src/connector/features/protocol_controller/: __init__.py  protocol_controller_base.py
gen5/gen5/src/connector/features/shake_controller/: __init__.py  shake_controller_base.py
gen5/gen5/src/connector/features/temperature_controller/: __init__.py  temperature_controller_base.py
gen5/gen5/src/connector/io/: __init__.py  gen5_ole_command_protocol.py  gen5_simulated_OLE_interface.py
gen5/gen5/tests/: test_pass.py
lab-configuration/: index.html
laborchestrator/: .gitignore  Dockerfile  config.py  parse_process.py  platform_config.yaml  read_process.py  settings.py  start_orchestrator.sh  start_script.py
laborchestrator/tests/: test_shaker_process.py
laborchestrator/vu_lab/: worker_adaption.py
laborchestrator/vu_lab/processes/: __init__.py  basic_process.py  empty_process.py  mini_process.py  scanner_process.py  shaker_process.py  test_process.py
laborchestrator/vu_lab/resources/: scanner_resource.py
laborchestrator/vu_lab/wrappers/: __init__.py  device_interface.py  gen5_wrapper.py  generic_robot_arm_wrapper.py  shaker_wrapper.py
microplate/: Dockerfile
orchestrator/: config.py  index.html  read_process.py  start_script.py
orchestrator/tests/: test_shaker_process.py
orchestrator/vu_lab/: worker_adaption.py
orchestrator/vu_lab/processes/: basic_process.py  empty_process.py  mini_process.py  shaker_process.py
orchestrator/vu_lab/wrappers/: __init__.py  device_interface.py  generic_robot_arm_wrapper.py  shaker_wrapper.py
platereader/: README.md
platereader/controller/: main.py  synergy.py
platereader/synergy_htx/: synergy_htx_v1_0.sila.xml
platereader/synergy_htx/synergy_htx/: server.py
platereader/synergy_htx/synergy_htx/feature_implementations/: synergyhtx_impl.py
platform_status_db/: Dockerfile  init_db.sh
processes/: TestProcess.py  basic_process.py
robot-arm/: Dockerfile  README.md  pyproject.toml
robot-arm/default_graphs/: position_graph_XArm.gml
robot-arm/dev_ws/src/silaros/: package.xml  setup.cfg  setup.py
robot-arm/dev_ws/src/silaros/silaros/: controller.py  subscriber.py
robot-arm/new_graphs/: position_graph_VULabArm.gml  position_graph_XArm.gml  position_graph_XArm.gml.backup2
robot-arm/saved_graphs/: position_graph_Dummy.gml  position_graph_XArm.gml
robot-arm/tests/: test_xarm_impl.py
robot-arm/vu_lab/: VULabArm.py  xarm_impl.py
search/: search_index.json
src/openlab_vu/: __init__.py  my_module.py  utils.py
src/openlab_vu/laborchestrator/: .gitignore  Dockerfile  config.py  platform_config.yaml  start_script.py
src/openlab_vu/laborchestrator/tests/: test_shaker_process.py
src/openlab_vu/laborchestrator/vu_lab/: worker_adaptation.py  worker_adaption.py
src/openlab_vu/laborchestrator/vu_lab/processes/: basic_process.py  empty_process.py  scanner_process.py
src/openlab_vu/laborchestrator/vu_lab/resources/: scanner_resource.py
src/openlab_vu/laborchestrator/vu_lab/wrappers/: device_interface.py  generic_robot_arm_wrapper.py  scanner_wrapper.py  shaker_wrapper.py
src/openlab_vu/platereader/: pyproject.toml
src/openlab_vu/platereader/controller/: synergy.py  types.py
src/openlab_vu/platereader/synergy_htx/: server.py
src/openlab_vu/platereader/synergy_htx/feature_implementations/: synergyhtx_impl.py  updated_synergyhtx_impl.py
src/openlab_vu/robot_arm/: Dockerfile
src/openlab_vu/robot_arm/default_graphs/: position_graph_XArm.gml
src/openlab_vu/robot_arm/new_graphs/: position_graph_XArm.gml.backup
src/openlab_vu/robot_arm/tests/: test_xarm_impl.py
src/openlab_vu/teleshake/: diagnose_serial.py
superpowers/plans/2026-06-24-documentation-pages/: index.html
superpowers/specs/2026-06-24-documentation-design/: index.html
teleshake/: Dockerfile  codegen.sh  teleshake.crt  teleshake.csr  teleshake.key
tests/: test_my_module.py
