# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Djura Smits", email = "d.smits@esciencecenter.nl" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sila2>=0.12.2",
    "unitelabs-cdk>=0.3.8",
    "pythonlab", # Package index defined in  .pyirc
    "sila2-drv-shaker-thermoscientific-teleshake1536 @ https://gitlab.com/sila-driver-group/teleshake.git",
    "laborchestrator",
    "labscheduler>=0.3.1",
]
description = "Configuration of openlab for VU lab"
keywords = [""]
license = "Apache-2.0"
name = "openlab_vu"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "~=3.12.0"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "build",  # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "myst_parser",
]
publishing = [
    "build",
    "twine",
    "wheel",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["laborchestrator*"]
exclude = ["gen5*", "teleshake*"]

[project.urls]
Repository = "https://github.com/OSLA-project/openlab_vu"
Issues = "https://github.com/OSLA-project/openlab_vu/issues"
Changelog = "https://github.com/OSLA-project/openlab_vu/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["src/openlab_vu"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
line-length = 120
output-format = "concise"
exclude = ["laborchestrator/vu_lab/worker_adaption.py"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
]

"laborchestrator/start_script.py" = ["PLC0415"]
"laborchestrator/vu_lab/processes/empty_process.py" = [
    "ERA001",
    "D102",
]
"laborchestrator/vu_lab/worker_adaption.py" = [
    "D101",
    "D419",
    "D102",
    "D415"
]


[tool.ruff.lint.isort]
known-first-party = ["openlab_vu"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/openlab_vu/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

# Configure setuptools to find packages in the laborchestrator directory
[tool.setuptools]
package-dir = {"vu_lab" = "laborchestrator/vu_lab"}
packages = ["vu_lab", "vu_lab.processes", "vu_lab.wrappers"]
