[project]
name = "synergy_htx"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["synergy_htx*"]

[tool.setuptools.package-data]
"synergy_htx.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
